--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "js-getting-started",
+  "name": "boredom",
   "version": "0.3.0",
-  "description": "A sample Node.js app using Express 4",
+  "description": "",
   "engines": {
     "node": "16.x"
   },
@@ -11,9 +11,11 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "@trycourier/courier": "^4.1.1",
     "cool-ascii-faces": "^1.3.4",
     "ejs": "^3.1.5",
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "node-fetch": "^3.3.0"
   },
   "devDependencies": {
     "got": "^11.3.0",
